<resources>
    <string name="app_name">GitHub Application</string>
    <string name="repo_button_text">Check Repository</string>
    <string name="open_issues_text">Open issues:</string>
    <string name="user_repositories">~User Repositories~</string>
    <string name="repo_info">Repo Info</string>
    <string name="default_branch">Default Branch:</string>
    <string name="watchers">Watchers:</string>
    <string name="size">Size:</string>
    <string name="description">Description:</string>
    <string name="close_button_text">Close</string>
    <string name="logIn_text">Please provide your GitHub user name</string>
    <string name="logIn_button_text">Login</string>
    <string name="edit_text_login_hint">Enter user name</string>
</resources>