<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <RelativeLayout
        android:id="@+id/login_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:id="@+id/img_github_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:scaleType="centerInside"
            android:background="@drawable/circle_border">

            <ImageView
                android:id="@+id/img_github"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="9dp"
                android:adjustViewBounds="true"
                android:background="@drawable/circle"
                android:padding="3dp"
                android:src="@drawable/githublogo"
                android:scaleType="centerInside" />

        </RelativeLayout>

        <TextView
            android:id="@+id/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_github_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15sp"
            android:gravity="center"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/white"
            android:text="@string/logIn_text"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_below="@id/login_info_layout">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/edit_text_login_hint"
            android:gravity="center"
            android:textSize="18sp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/companyNameColor"
            android:background="@drawable/edit_text_shape"
            android:inputType="text"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="80dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:background="@drawable/button_shape"
            android:text="@string/logIn_button_text"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>
</RelativeLayout>